// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> by default should render the right structure 1`] = `
<Header
  activeNavigationItemIndex={null}
  dateRangePickerLocaleCode="ko"
  isBackgroundFilled={false}
  logoSrc={null}
  logoText="someLogoText"
  navigationItems={
    Array [
      Object {
        "text": "Home",
      },
      Object {
        "href": "/all-properties",
        "subItems": Array [
          Object {
            "href": "/la-casa-viva",
            "text": "La Casa Viva",
          },
          Object {
            "href": "/la-casa-muerta",
            "text": "La Casa Muerta",
          },
          Object {
            "href": "/the-white-lodge",
            "text": "The White Lodge",
          },
          Object {
            "href": "/the-black-lodge",
            "text": "The Black Lodge",
          },
        ],
        "text": "All properties",
      },
      Object {
        "href": "/",
        "text": "Contact Us",
      },
      Object {
        "href": "/",
        "text": "What to do",
      },
    ]
  }
  primaryCTA={null}
  searchBarGetIsDayBlocked={[Function]}
  searchBarGuestsOptions={Array []}
  searchBarLocationOptions={Array []}
>
  <header
    className=""
  >
    <HorizontalGutters
      as={[Function]}
      borderless={true}
      text={true}
    >
      <Container
        as={[Function]}
        borderless={true}
        text={true}
      >
        <Menu
          borderless={true}
          className="ui text container"
        >
          <div
            className="ui borderless ui text container menu"
          >
            <MenuItem
              href="/"
              link={true}
            >
              <a
                className="link item"
                href="/"
                onClick={[Function]}
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      someLogoText
                    </h4>
                  </Header>
                </Heading>
              </a>
            </MenuItem>
            <ShowOn
              computer={false}
              mobile={true}
              parent={[Function]}
              parentProps={
                Object {
                  "position": "right",
                }
              }
              tablet={false}
              widescreen={false}
            >
              <MenuMenu
                className="show-on-mobile"
                position="right"
              >
                <div
                  className="right menu show-on-mobile"
                >
                  <MenuItem>
                    <div
                      className="item"
                      onClick={[Function]}
                    >
                      <Modal
                        isFullscreen={true}
                        onClose={[Function]}
                        size="tiny"
                        trigger={
                          <Icon
                            color={null}
                            hasBorder={false}
                            isButton={false}
                            isCircular={false}
                            isColorInverted={false}
                            isDisabled={false}
                            isLabelLeft={false}
                            labelText={null}
                            labelWeight={null}
                            name="bars"
                            path={null}
                            size={null}
                          />
                        }
                      >
                        <Modal
                          closeIcon={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="close"
                              path={null}
                              size={null}
                            />
                          }
                          closeOnDimmerClick={true}
                          closeOnDocumentClick={false}
                          content={
                            <Menu
                              text={true}
                              vertical={true}
                            >
                              <MenuItem
                                href="/"
                                link={true}
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  someLogoText
                                </Heading>
                              </MenuItem>
                              <MenuItem
                                active={false}
                                link={true}
                              >
                                Home
                              </MenuItem>
                              <Accordion
                                as={[Function]}
                                panels={
                                  Array [
                                    Object {
                                      "content": Object {
                                        "content": Array [
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-viva"
                                            link={true}
                                          >
                                            La Casa Viva
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-muerta"
                                            link={true}
                                          >
                                            La Casa Muerta
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-white-lodge"
                                            link={true}
                                          >
                                            The White Lodge
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-black-lodge"
                                            link={true}
                                          >
                                            The Black Lodge
                                          </MenuItem>,
                                        ],
                                        "key": "1All properties",
                                      },
                                      "title": Object {
                                        "content": <MenuItem
                                          active={false}
                                          href="/all-properties"
                                          link={true}
                                        >
                                          All properties
                                        </MenuItem>,
                                        "key": "All properties1",
                                      },
                                    },
                                  ]
                                }
                              />
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                Contact Us
                              </MenuItem>
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                What to do
                              </MenuItem>
                            </Menu>
                          }
                          dimmer="inverted"
                          eventPool="Modal"
                          onClose={[Function]}
                          size="fullscreen"
                          trigger={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="bars"
                              path={null}
                              size={null}
                            />
                          }
                        >
                          <Portal
                            className="ui inverted page modals dimmer transition visible active"
                            closeOnDocumentClick={false}
                            closeOnEscape={true}
                            closeOnRootNodeClick={true}
                            eventPool="Modal"
                            mountNode={<body />}
                            onClose={[Function]}
                            onMount={[Function]}
                            onOpen={[Function]}
                            onUnmount={[Function]}
                            openOnTriggerClick={true}
                            trigger={
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                path={null}
                                size={null}
                              />
                            }
                          >
                            <Ref
                              innerRef={[Function]}
                            >
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                path={null}
                                size={null}
                              >
                                <i
                                  className="icon"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                >
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M20.5,5.06H3.5a.23.23,0,0,0-.24.23V6.64a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V5.29a.23.23,0,0,0-.24-.23Zm0,6H3.5a.24.24,0,0,0-.24.24v1.34a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V11.33a.24.24,0,0,0-.24-.24Zm0,6H3.5a.24.24,0,0,0-.24.24v1.35a.23.23,0,0,0,.24.23h17a.23.23,0,0,0,.24-.23V17.36a.24.24,0,0,0-.24-.24Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </i>
                              </Icon>
                            </Ref>
                          </Portal>
                        </Modal>
                      </Modal>
                    </div>
                  </MenuItem>
                </div>
              </MenuMenu>
            </ShowOn>
            <ShowOn
              computer={true}
              mobile={false}
              parent={[Function]}
              parentProps={
                Object {
                  "position": "right",
                }
              }
              tablet={true}
              widescreen={true}
            >
              <MenuMenu
                className="show-on-tablet show-on-computer show-on-widescreen"
                position="right"
              >
                <div
                  className="right menu show-on-tablet show-on-computer show-on-widescreen"
                >
                  <MenuItem
                    active={false}
                    key="Home0"
                    link={true}
                  >
                    <div
                      className="link item"
                      onClick={[Function]}
                    >
                      Home
                    </div>
                  </MenuItem>
                  <Submenu
                    isMenuItem={true}
                    isSimple={true}
                    isTriggerUnderlined={false}
                    isTriggeredOnHover={true}
                    items={
                      Array [
                        Object {
                          "href": "/la-casa-viva",
                          "text": "La Casa Viva",
                        },
                        Object {
                          "href": "/la-casa-muerta",
                          "text": "La Casa Muerta",
                        },
                        Object {
                          "href": "/the-white-lodge",
                          "text": "The White Lodge",
                        },
                        Object {
                          "href": "/the-black-lodge",
                          "text": "The Black Lodge",
                        },
                      ]
                    }
                    key="All properties1"
                    name={null}
                    onChange={[Function]}
                    pointing="top left"
                    value={null}
                    willOpenAbove={false}
                  >
                    <Dropdown
                      additionLabel="Add "
                      additionPosition="top"
                      className=""
                      closeOnBlur={true}
                      deburr={false}
                      icon={
                        <Icon
                          color={null}
                          hasBorder={false}
                          isButton={false}
                          isCircular={false}
                          isColorInverted={false}
                          isDisabled={false}
                          isLabelLeft={false}
                          labelText={null}
                          labelWeight={null}
                          name="caret down"
                          path={null}
                          size="small"
                        />
                      }
                      item={true}
                      minCharacters={1}
                      name={null}
                      noResultsMessage="No results found."
                      onChange={[Function]}
                      openOnFocus={true}
                      options={
                        Array [
                          Object {
                            "href": "/la-casa-viva",
                            "key": "La Casa Viva",
                            "text": "La Casa Viva",
                          },
                          Object {
                            "href": "/la-casa-muerta",
                            "key": "La Casa Muerta",
                            "text": "La Casa Muerta",
                          },
                          Object {
                            "href": "/the-white-lodge",
                            "key": "The White Lodge",
                            "text": "The White Lodge",
                          },
                          Object {
                            "href": "/the-black-lodge",
                            "key": "The Black Lodge",
                            "text": "The Black Lodge",
                          },
                        ]
                      }
                      pointing="top left"
                      renderLabel={[Function]}
                      scrolling={true}
                      searchInput="text"
                      selectOnBlur={true}
                      selectOnNavigation={true}
                      simple={true}
                      trigger={
                        <MenuItem
                          active={false}
                          href="/all-properties"
                          link={true}
                        >
                          All properties
                        </MenuItem>
                      }
                      upward={false}
                      value={null}
                      wrapSelection={true}
                    >
                      <div
                        aria-expanded={false}
                        className="ui item simple scrolling top left pointing dropdown"
                        name={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseDown={[Function]}
                        role="listbox"
                        tabIndex={0}
                      >
                        <MenuItem
                          active={false}
                          href="/all-properties"
                          key="All properties1"
                          link={true}
                        >
                          <a
                            className="link item"
                            href="/all-properties"
                            onClick={[Function]}
                          >
                            All properties
                          </a>
                        </MenuItem>
                        <Icon
                          color={null}
                          hasBorder={false}
                          isButton={false}
                          isCircular={false}
                          isColorInverted={false}
                          isDisabled={false}
                          isLabelLeft={false}
                          labelText={null}
                          labelWeight={null}
                          name="caret down"
                          onClick={[Function]}
                          path={null}
                          size="small"
                        >
                          <i
                            className="icon small"
                            onClick={[Function]}
                          >
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M20,8.5l-8,7-8-7Z"
                                fill="currentColor"
                              />
                            </svg>
                          </i>
                        </Icon>
                        <DropdownMenu>
                          <div
                            className="menu transition"
                          >
                            <DropdownItem
                              active={false}
                              href="/la-casa-viva"
                              key="La Casa Viva"
                              onClick={[Function]}
                              selected={true}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="La Casa Viva"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={true}
                                className="selected item"
                                href="/la-casa-viva"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="La Casa Viva"
                                >
                                  La Casa Viva
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/la-casa-muerta"
                              key="La Casa Muerta"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="La Casa Muerta"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/la-casa-muerta"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="La Casa Muerta"
                                >
                                  La Casa Muerta
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/the-white-lodge"
                              key="The White Lodge"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="The White Lodge"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/the-white-lodge"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="The White Lodge"
                                >
                                  The White Lodge
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/the-black-lodge"
                              key="The Black Lodge"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="The Black Lodge"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/the-black-lodge"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="The Black Lodge"
                                >
                                  The Black Lodge
                                </span>
                              </a>
                            </DropdownItem>
                          </div>
                        </DropdownMenu>
                      </div>
                    </Dropdown>
                  </Submenu>
                  <MenuItem
                    active={false}
                    href="/"
                    key="Contact Us2"
                    link={true}
                  >
                    <a
                      className="link item"
                      href="/"
                      onClick={[Function]}
                    >
                      Contact Us
                    </a>
                  </MenuItem>
                  <MenuItem
                    active={false}
                    href="/"
                    key="What to do3"
                    link={true}
                  >
                    <a
                      className="link item"
                      href="/"
                      onClick={[Function]}
                    >
                      What to do
                    </a>
                  </MenuItem>
                </div>
              </MenuMenu>
            </ShowOn>
          </div>
        </Menu>
      </Container>
    </HorizontalGutters>
  </header>
</Header>
`;

exports[`<Header /> if \`props.isBackgroundFilled\` is true should render the right structure 1`] = `
<Header
  activeNavigationItemIndex={null}
  dateRangePickerLocaleCode="ko"
  isBackgroundFilled={true}
  logoSrc={null}
  logoText="someLogoText"
  navigationItems={
    Array [
      Object {
        "text": "Home",
      },
      Object {
        "href": "/all-properties",
        "subItems": Array [
          Object {
            "href": "/la-casa-viva",
            "text": "La Casa Viva",
          },
          Object {
            "href": "/la-casa-muerta",
            "text": "La Casa Muerta",
          },
          Object {
            "href": "/the-white-lodge",
            "text": "The White Lodge",
          },
          Object {
            "href": "/the-black-lodge",
            "text": "The Black Lodge",
          },
        ],
        "text": "All properties",
      },
      Object {
        "href": "/",
        "text": "Contact Us",
      },
      Object {
        "href": "/",
        "text": "What to do",
      },
    ]
  }
  primaryCTA={null}
  searchBarGetIsDayBlocked={[Function]}
  searchBarGuestsOptions={Array []}
  searchBarLocationOptions={Array []}
>
  <header
    className="is-background-filled"
  >
    <HorizontalGutters
      as={[Function]}
      borderless={true}
      text={true}
    >
      <Container
        as={[Function]}
        borderless={true}
        text={true}
      >
        <Menu
          borderless={true}
          className="ui text container"
        >
          <div
            className="ui borderless ui text container menu"
          >
            <MenuItem
              href="/"
              link={true}
            >
              <a
                className="link item"
                href="/"
                onClick={[Function]}
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      someLogoText
                    </h4>
                  </Header>
                </Heading>
              </a>
            </MenuItem>
            <ShowOn
              computer={false}
              mobile={true}
              parent={[Function]}
              parentProps={
                Object {
                  "position": "right",
                }
              }
              tablet={false}
              widescreen={false}
            >
              <MenuMenu
                className="show-on-mobile"
                position="right"
              >
                <div
                  className="right menu show-on-mobile"
                >
                  <MenuItem>
                    <div
                      className="item"
                      onClick={[Function]}
                    >
                      <Modal
                        isFullscreen={true}
                        onClose={[Function]}
                        size="tiny"
                        trigger={
                          <Icon
                            color={null}
                            hasBorder={false}
                            isButton={false}
                            isCircular={false}
                            isColorInverted={false}
                            isDisabled={false}
                            isLabelLeft={false}
                            labelText={null}
                            labelWeight={null}
                            name="bars"
                            path={null}
                            size={null}
                          />
                        }
                      >
                        <Modal
                          closeIcon={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="close"
                              path={null}
                              size={null}
                            />
                          }
                          closeOnDimmerClick={true}
                          closeOnDocumentClick={false}
                          content={
                            <Menu
                              text={true}
                              vertical={true}
                            >
                              <MenuItem
                                href="/"
                                link={true}
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  someLogoText
                                </Heading>
                              </MenuItem>
                              <MenuItem
                                active={false}
                                link={true}
                              >
                                Home
                              </MenuItem>
                              <Accordion
                                as={[Function]}
                                panels={
                                  Array [
                                    Object {
                                      "content": Object {
                                        "content": Array [
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-viva"
                                            link={true}
                                          >
                                            La Casa Viva
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-muerta"
                                            link={true}
                                          >
                                            La Casa Muerta
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-white-lodge"
                                            link={true}
                                          >
                                            The White Lodge
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-black-lodge"
                                            link={true}
                                          >
                                            The Black Lodge
                                          </MenuItem>,
                                        ],
                                        "key": "1All properties",
                                      },
                                      "title": Object {
                                        "content": <MenuItem
                                          active={false}
                                          href="/all-properties"
                                          link={true}
                                        >
                                          All properties
                                        </MenuItem>,
                                        "key": "All properties1",
                                      },
                                    },
                                  ]
                                }
                              />
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                Contact Us
                              </MenuItem>
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                What to do
                              </MenuItem>
                            </Menu>
                          }
                          dimmer="inverted"
                          eventPool="Modal"
                          onClose={[Function]}
                          size="fullscreen"
                          trigger={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="bars"
                              path={null}
                              size={null}
                            />
                          }
                        >
                          <Portal
                            className="ui inverted page modals dimmer transition visible active"
                            closeOnDocumentClick={false}
                            closeOnEscape={true}
                            closeOnRootNodeClick={true}
                            eventPool="Modal"
                            mountNode={<body />}
                            onClose={[Function]}
                            onMount={[Function]}
                            onOpen={[Function]}
                            onUnmount={[Function]}
                            openOnTriggerClick={true}
                            trigger={
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                path={null}
                                size={null}
                              />
                            }
                          >
                            <Ref
                              innerRef={[Function]}
                            >
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                path={null}
                                size={null}
                              >
                                <i
                                  className="icon"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                >
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M20.5,5.06H3.5a.23.23,0,0,0-.24.23V6.64a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V5.29a.23.23,0,0,0-.24-.23Zm0,6H3.5a.24.24,0,0,0-.24.24v1.34a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V11.33a.24.24,0,0,0-.24-.24Zm0,6H3.5a.24.24,0,0,0-.24.24v1.35a.23.23,0,0,0,.24.23h17a.23.23,0,0,0,.24-.23V17.36a.24.24,0,0,0-.24-.24Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </i>
                              </Icon>
                            </Ref>
                          </Portal>
                        </Modal>
                      </Modal>
                    </div>
                  </MenuItem>
                </div>
              </MenuMenu>
            </ShowOn>
            <ShowOn
              computer={true}
              mobile={false}
              parent={[Function]}
              parentProps={
                Object {
                  "position": "right",
                }
              }
              tablet={true}
              widescreen={true}
            >
              <MenuMenu
                className="show-on-tablet show-on-computer show-on-widescreen"
                position="right"
              >
                <div
                  className="right menu show-on-tablet show-on-computer show-on-widescreen"
                >
                  <MenuItem
                    active={false}
                    key="Home0"
                    link={true}
                  >
                    <div
                      className="link item"
                      onClick={[Function]}
                    >
                      Home
                    </div>
                  </MenuItem>
                  <Submenu
                    isMenuItem={true}
                    isSimple={true}
                    isTriggerUnderlined={false}
                    isTriggeredOnHover={true}
                    items={
                      Array [
                        Object {
                          "href": "/la-casa-viva",
                          "text": "La Casa Viva",
                        },
                        Object {
                          "href": "/la-casa-muerta",
                          "text": "La Casa Muerta",
                        },
                        Object {
                          "href": "/the-white-lodge",
                          "text": "The White Lodge",
                        },
                        Object {
                          "href": "/the-black-lodge",
                          "text": "The Black Lodge",
                        },
                      ]
                    }
                    key="All properties1"
                    name={null}
                    onChange={[Function]}
                    pointing="top left"
                    value={null}
                    willOpenAbove={false}
                  >
                    <Dropdown
                      additionLabel="Add "
                      additionPosition="top"
                      className=""
                      closeOnBlur={true}
                      deburr={false}
                      icon={
                        <Icon
                          color={null}
                          hasBorder={false}
                          isButton={false}
                          isCircular={false}
                          isColorInverted={false}
                          isDisabled={false}
                          isLabelLeft={false}
                          labelText={null}
                          labelWeight={null}
                          name="caret down"
                          path={null}
                          size="small"
                        />
                      }
                      item={true}
                      minCharacters={1}
                      name={null}
                      noResultsMessage="No results found."
                      onChange={[Function]}
                      openOnFocus={true}
                      options={
                        Array [
                          Object {
                            "href": "/la-casa-viva",
                            "key": "La Casa Viva",
                            "text": "La Casa Viva",
                          },
                          Object {
                            "href": "/la-casa-muerta",
                            "key": "La Casa Muerta",
                            "text": "La Casa Muerta",
                          },
                          Object {
                            "href": "/the-white-lodge",
                            "key": "The White Lodge",
                            "text": "The White Lodge",
                          },
                          Object {
                            "href": "/the-black-lodge",
                            "key": "The Black Lodge",
                            "text": "The Black Lodge",
                          },
                        ]
                      }
                      pointing="top left"
                      renderLabel={[Function]}
                      scrolling={true}
                      searchInput="text"
                      selectOnBlur={true}
                      selectOnNavigation={true}
                      simple={true}
                      trigger={
                        <MenuItem
                          active={false}
                          href="/all-properties"
                          link={true}
                        >
                          All properties
                        </MenuItem>
                      }
                      upward={false}
                      value={null}
                      wrapSelection={true}
                    >
                      <div
                        aria-expanded={false}
                        className="ui item simple scrolling top left pointing dropdown"
                        name={null}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseDown={[Function]}
                        role="listbox"
                        tabIndex={0}
                      >
                        <MenuItem
                          active={false}
                          href="/all-properties"
                          key="All properties1"
                          link={true}
                        >
                          <a
                            className="link item"
                            href="/all-properties"
                            onClick={[Function]}
                          >
                            All properties
                          </a>
                        </MenuItem>
                        <Icon
                          color={null}
                          hasBorder={false}
                          isButton={false}
                          isCircular={false}
                          isColorInverted={false}
                          isDisabled={false}
                          isLabelLeft={false}
                          labelText={null}
                          labelWeight={null}
                          name="caret down"
                          onClick={[Function]}
                          path={null}
                          size="small"
                        >
                          <i
                            className="icon small"
                            onClick={[Function]}
                          >
                            <svg
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M20,8.5l-8,7-8-7Z"
                                fill="currentColor"
                              />
                            </svg>
                          </i>
                        </Icon>
                        <DropdownMenu>
                          <div
                            className="menu transition"
                          >
                            <DropdownItem
                              active={false}
                              href="/la-casa-viva"
                              key="La Casa Viva"
                              onClick={[Function]}
                              selected={true}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="La Casa Viva"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={true}
                                className="selected item"
                                href="/la-casa-viva"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="La Casa Viva"
                                >
                                  La Casa Viva
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/la-casa-muerta"
                              key="La Casa Muerta"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="La Casa Muerta"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/la-casa-muerta"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="La Casa Muerta"
                                >
                                  La Casa Muerta
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/the-white-lodge"
                              key="The White Lodge"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="The White Lodge"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/the-white-lodge"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="The White Lodge"
                                >
                                  The White Lodge
                                </span>
                              </a>
                            </DropdownItem>
                            <DropdownItem
                              active={false}
                              href="/the-black-lodge"
                              key="The Black Lodge"
                              onClick={[Function]}
                              selected={false}
                              style={
                                Object {
                                  "pointerEvents": "all",
                                }
                              }
                              text="The Black Lodge"
                            >
                              <a
                                aria-checked={false}
                                aria-selected={false}
                                className="item"
                                href="/the-black-lodge"
                                onClick={[Function]}
                                role="option"
                                style={
                                  Object {
                                    "pointerEvents": "all",
                                  }
                                }
                              >
                                <span
                                  className="text"
                                  key="The Black Lodge"
                                >
                                  The Black Lodge
                                </span>
                              </a>
                            </DropdownItem>
                          </div>
                        </DropdownMenu>
                      </div>
                    </Dropdown>
                  </Submenu>
                  <MenuItem
                    active={false}
                    href="/"
                    key="Contact Us2"
                    link={true}
                  >
                    <a
                      className="link item"
                      href="/"
                      onClick={[Function]}
                    >
                      Contact Us
                    </a>
                  </MenuItem>
                  <MenuItem
                    active={false}
                    href="/"
                    key="What to do3"
                    link={true}
                  >
                    <a
                      className="link item"
                      href="/"
                      onClick={[Function]}
                    >
                      What to do
                    </a>
                  </MenuItem>
                </div>
              </MenuMenu>
            </ShowOn>
          </div>
        </Menu>
      </Container>
    </HorizontalGutters>
  </header>
</Header>
`;

exports[`<Header /> if navigation items exceed the header max width should render the right structure 1`] = `
<Header
  activeNavigationItemIndex={null}
  dateRangePickerLocaleCode="ko"
  isBackgroundFilled={true}
  logoSrc={null}
  logoText="someLogoText"
  navigationItems={
    Array [
      Object {
        "href": "/",
        "text": "Home",
      },
      Object {
        "subItems": Array [
          Object {
            "href": "/la-casa-viva",
            "text": "La Casa Viva",
          },
          Object {
            "href": "/la-casa-muerta",
            "text": "La Casa Muerta",
          },
          Object {
            "href": "/the-white-lodge",
            "text": "The White Lodge",
          },
          Object {
            "href": "/the-black-lodge",
            "text": "The Black Lodge",
          },
        ],
        "text": "All properties",
      },
      Object {
        "href": "/",
        "text": "Contact Us",
      },
      Object {
        "href": "/",
        "text": "What to do when you go out on a Sunday and then somebody attacks you with big floppy fish",
      },
    ]
  }
  primaryCTA={null}
  searchBarGetIsDayBlocked={[Function]}
  searchBarGuestsOptions={Array []}
  searchBarLocationOptions={Array []}
>
  <header
    className="is-background-filled"
  >
    <HorizontalGutters
      as={[Function]}
      borderless={true}
      text={true}
    >
      <Container
        as={[Function]}
        borderless={true}
        text={true}
      >
        <Menu
          borderless={true}
          className="ui text container"
        >
          <div
            className="ui borderless ui text container menu"
          >
            <MenuItem
              href="/"
              link={true}
            >
              <a
                className="link item"
                href="/"
                onClick={[Function]}
              >
                <Heading
                  className={null}
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    className={null}
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      someLogoText
                    </h4>
                  </Header>
                </Heading>
              </a>
            </MenuItem>
            <ShowOn
              computer={true}
              mobile={true}
              parent={[Function]}
              parentProps={
                Object {
                  "position": "right",
                }
              }
              tablet={true}
              widescreen={true}
            >
              <MenuMenu
                className="show-on-mobile show-on-tablet show-on-computer show-on-widescreen"
                position="right"
              >
                <div
                  className="right menu show-on-mobile show-on-tablet show-on-computer show-on-widescreen"
                >
                  <MenuItem>
                    <div
                      className="item"
                      onClick={[Function]}
                    >
                      <Modal
                        isFullscreen={true}
                        onClose={[Function]}
                        size="tiny"
                        trigger={
                          <Icon
                            color={null}
                            hasBorder={false}
                            isButton={false}
                            isCircular={false}
                            isColorInverted={false}
                            isDisabled={false}
                            isLabelLeft={false}
                            labelText={null}
                            labelWeight={null}
                            name="bars"
                            path={null}
                            size={null}
                          />
                        }
                      >
                        <Modal
                          closeIcon={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="close"
                              path={null}
                              size={null}
                            />
                          }
                          closeOnDimmerClick={true}
                          closeOnDocumentClick={false}
                          content={
                            <Menu
                              text={true}
                              vertical={true}
                            >
                              <MenuItem
                                href="/"
                                link={true}
                              >
                                <Heading
                                  className={null}
                                  isColorInverted={false}
                                  size="small"
                                  textAlign={null}
                                >
                                  someLogoText
                                </Heading>
                              </MenuItem>
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                Home
                              </MenuItem>
                              <Accordion
                                as={[Function]}
                                panels={
                                  Array [
                                    Object {
                                      "content": Object {
                                        "content": Array [
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-viva"
                                            link={true}
                                          >
                                            La Casa Viva
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/la-casa-muerta"
                                            link={true}
                                          >
                                            La Casa Muerta
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-white-lodge"
                                            link={true}
                                          >
                                            The White Lodge
                                          </MenuItem>,
                                          <MenuItem
                                            active={false}
                                            href="/the-black-lodge"
                                            link={true}
                                          >
                                            The Black Lodge
                                          </MenuItem>,
                                        ],
                                        "key": "1All properties",
                                      },
                                      "title": Object {
                                        "content": <MenuItem
                                          active={false}
                                          link={true}
                                        >
                                          All properties
                                        </MenuItem>,
                                        "key": "All properties1",
                                      },
                                    },
                                  ]
                                }
                              />
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                Contact Us
                              </MenuItem>
                              <MenuItem
                                active={false}
                                href="/"
                                link={true}
                              >
                                What to do when you go out on a Sunday and then somebody attacks you with big floppy fish
                              </MenuItem>
                            </Menu>
                          }
                          dimmer="inverted"
                          eventPool="Modal"
                          onClose={[Function]}
                          size="fullscreen"
                          trigger={
                            <Icon
                              color={null}
                              hasBorder={false}
                              isButton={false}
                              isCircular={false}
                              isColorInverted={false}
                              isDisabled={false}
                              isLabelLeft={false}
                              labelText={null}
                              labelWeight={null}
                              name="bars"
                              path={null}
                              size={null}
                            />
                          }
                        >
                          <Portal
                            className="ui inverted page modals dimmer transition visible active"
                            closeOnDocumentClick={false}
                            closeOnEscape={true}
                            closeOnRootNodeClick={true}
                            eventPool="Modal"
                            mountNode={<body />}
                            onClose={[Function]}
                            onMount={[Function]}
                            onOpen={[Function]}
                            onUnmount={[Function]}
                            openOnTriggerClick={true}
                            trigger={
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                path={null}
                                size={null}
                              />
                            }
                          >
                            <Ref
                              innerRef={[Function]}
                            >
                              <Icon
                                color={null}
                                hasBorder={false}
                                isButton={false}
                                isCircular={false}
                                isColorInverted={false}
                                isDisabled={false}
                                isLabelLeft={false}
                                labelText={null}
                                labelWeight={null}
                                name="bars"
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                path={null}
                                size={null}
                              >
                                <i
                                  className="icon"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onMouseEnter={[Function]}
                                  onMouseLeave={[Function]}
                                >
                                  <svg
                                    viewBox="0 0 24 24"
                                  >
                                    <path
                                      d="M20.5,5.06H3.5a.23.23,0,0,0-.24.23V6.64a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V5.29a.23.23,0,0,0-.24-.23Zm0,6H3.5a.24.24,0,0,0-.24.24v1.34a.24.24,0,0,0,.24.24h17a.24.24,0,0,0,.24-.24V11.33a.24.24,0,0,0-.24-.24Zm0,6H3.5a.24.24,0,0,0-.24.24v1.35a.23.23,0,0,0,.24.23h17a.23.23,0,0,0,.24-.23V17.36a.24.24,0,0,0-.24-.24Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </i>
                              </Icon>
                            </Ref>
                          </Portal>
                        </Modal>
                      </Modal>
                    </div>
                  </MenuItem>
                </div>
              </MenuMenu>
            </ShowOn>
          </div>
        </Menu>
      </Container>
    </HorizontalGutters>
  </header>
</Header>
`;
